# Badger2040-MQTT

./: .clangd  CMakeLists.txt  README.md  build.sh  commands.txt  help  install.sh  lwip_import.cmake  spng_import.cmake  tiny-json.cmake
.cache/clangd/index/: Agent.cpp.7405692EF3F05C54.idx  Agent.h.03C987B802B11128.idx  BadgerAgent.cpp.B79B0F65B0EBC766.idx  BadgerAgent.h.F58F755D683A2569.idx  FreeRTOSConfig.h.EEA7446BB86FF9A9.idx  GPIOInputMgr.cpp.1ECB7DE3A80BA44B.idx  GPIOInputMgr.h.9993A50C3C6939FF.idx  GPIOObserver.cpp.473D34B1A1A9E779.idx  GPIOObserver.h.5CE33E0122872FA9.idx  IdleMemory.c.AC0CC9352F228E1D.idx  LEDAgent.cpp.F444B6FCA5F69A21.idx  LEDAgent.h.FC336EB8DCB43AAF.idx  MQTTAgent.cpp.C0C8D03EFBD9ADC7.idx  MQTTAgent.h.E3CF23881A5DBBD3.idx  MQTTAgentObserver.cpp.B3AA2FABE46CE928.idx  MQTTAgentObserver.h.1170055FB9C12DE3.idx  MQTTConfig.h.4B507DA1FA3847B5.idx  MQTTInterface.cpp.30890F62488B9DAB.idx  MQTTInterface.h.394CBC7FA9E2CE80.idx  MQTTRouter.cpp.960193C7E68EA882.idx  MQTTRouter.h.6CFDA7D8D7652BA4.idx  MQTTRouterBadger.cpp.CF6237399B071976.idx  MQTTRouterBadger.h.92DED3A5173A8FC5.idx  MQTTRouterLED.cpp.C278A0D504141080.idx  MQTTRouterLED.h.D50C0F0D73533C6D.idx  MQTTTopicHelper.cpp.3A167DE23F396A5C.idx  MQTTTopicHelper.h.89FCE3A392CBCB77.idx  SwitchMgr.cpp.BAD029DE33AFAC89.idx  SwitchMgr.h.107F63D163992BB5.idx  SwitchObserver.cpp.E975342A1EF7F5CC.idx  SwitchObserver.h.0B6F4C5F2C3E3164.idx  TCPTransport.cpp.148CC795C5A724A4.idx  TCPTransport.h.C8697CE8AC838D80.idx  WifiHelper.cpp.548F39ED20558A8B.idx  WifiHelper.h.B00BF01F03D57D01.idx  core_mqtt_config.h.7E2317F2103B06C1.idx  freertos_agent_message.c.C6D45EEF44E09831.idx  freertos_agent_message.h.BD2EF07DCA334C63.idx  freertos_command_pool.c.23AA11488B97DF93.idx  freertos_command_pool.h.5D54E03BF6A378F3.idx  (+4 more)
config/: device1.sh
config/Mosquitto/: client.sh  device1.sh
port/CoreHTTP/: core_http_config.h
port/CoreMQTT/: core_mqtt_config.h
port/CoreMQTT-Agent/: MQTTConfig.h
port/FreeRTOS-Kernel/: FreeRTOSConfig.h
port/lwip/: lwipopts.h  lwippools.h
port/miniz/: miniz_export.h
src/: BadgerAgent.cpp  BadgerAgent.h  CMakeLists.txt  LEDAgent.cpp  MQTTRouterBadger.cpp  MQTTRouterBadger.h  SwitchMgr.cpp  SwitchMgr.h  WifiHelper.cpp  WifiHelper.h  ble_server.cpp  main.cpp
src/Agents/: Agent.cpp  Agent.h  BadgerAgent.cpp  BadgerAgent.h  CMakeLists.txt  MusicAgent.cpp  MusicAgent.h
src/BLE/: CMakeLists.txt  btstack_config.h
src/GPIO/: CMakeLists.txt
src/HTTP/: CMakeLists.txt  Request.cpp  WeatherServiceRequest.cpp  WeatherServiceRequest.h
src/MQTT/: CMakeLists.txt  MQTTAgent.cpp  MQTTAgent.h  MQTTRouterBadger.cpp
src/MusicPlayer/: CMakeLists.txt  MusicDefs.h  MusicPlayer.cpp  MusicPlayer.h
src/NVS/: CMakeLists.txt  NVSOnboard.h
src/Transport/: CMakeLists.txt  TCPTransport.cpp  TCPTransport.h  TLSTransBlock.h  Transport.cpp  WifiHelper.cpp  WifiHelper.h
src/Views/: CMakeLists.txt  EventReminder.h  EventView.cpp  EventView.h  MainView.cpp  MainView.h  MessageView.cpp  MessageView.h  ReminderView.cpp  ReminderView.h  View.h  ViewUtil.h  logging_config.h  timeView.cpp  timeView.h
